--- a/public/index.html
+++ b/public/index.html
@@ -40,5 +40,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <!-- Eruda inspector: add for mobile debugging -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+    <script>eruda.init();</script>   -->
   </body>
 </html>
